# unhurried

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  animation.cpp  animation.h  debug.h  draw.cpp  draw.h  entity.cpp  entity.h  manager.cpp  manager.h  map.cpp  map.h  math.h  menu.cpp  menu.h  model.cpp  model.h  sprite.cpp  sprite.h  tbd.cpp  types.h  ui.cpp  ui.h  unhurried.cpp
assets/models/: attack.glb  boss.glb  boss_attack.gltf  boss_idle.gltf  boss_walk.gltf  idle.glb  player_attack.gltf  player_idle.gltf  player_run.gltf  player_walk.gltf  run.glb  run.gltf  walk.glb  walk.gltf  wind_blast_fly.gltf
assets/web/: unhurried.html
